ui/portal/web/public/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --color-surface-primary-rice: #FFFCF6;
  --color-surface-primary-green: #D2D184;
  --color-surface-secondary-rice: #FFF9F0;
  --color-surface-secondary-blue: #F0F1F7;
  --color-surface-secondary-red: #FEE6E8;
  --color-surface-tertiary-rice: #FFF3E1;
  --color-surface-tertiary-green: #E5E4B1;
  --color-surface-quaternary-green: #D2D184;
  --color-surface-quaternary-rice: #F3E5BF;
  --color-surface-quaternary-rice-hover: #EFDAA4;
  --color-surface-disabled-gray: #F5F4F4;
  --color-overlay-rice: #F2E2B8CC;
  --color-foreground-disabled-gray: #ACA9A7;
  --color-foreground-tertiary: #837D7B;
  --color-foreground-tertiary-rice: #E3BD66;
  --color-foreground-quaternary-rice: #F3E5BF;
  --color-foreground-secondary-rice: #FFF9F0;
  --color-foreground-primary-blue: #595763;
  --color-foreground-primary-red: #9A183D;
  --color-foreground-primary-green: #606427;
  --color-button-green: #BDBF5C;
  --color-primary-red: #FEF1F1;
  --color-primary-blue: #F7F8FB;
  --color-primary-rice: #9C4D21;
  --color-primary-900: #2E2521;
  --color-primary-gray: #D6D4D3;
  --color-primary-green: #F9F8EC;
  --color-secondary-700: #453D39;
  --color-secondary-blue: #918CC6;
  --color-secondary-rice: #9C4D21;
  --color-secondary-gray: #EAE9E9;
  --color-secondary-red: #FCCFD4;
  --color-secondary-green: #F1F0D6;
  --color-tertiary-500: #6E6865;
  --color-tertiary-rice: #F3E5BF;
  --color-tertiary-green: #E5E4B1;
  --color-tertiary-blue: #E2E3F2;
  --color-status-fail: #E71818;
  --color-status-success: #25B12A;

  --shadow-card: 0px 2px 4px rgba(171, 158, 138, 0.4), 0px -1px 2px rgba(241, 219, 186, 0.5);
  --shadow-btn-shadow-gradient: 0px 2px 4px rgba(171, 158, 138, 0.4), 0px -1px 2px rgba(241, 219, 186, 0.5), inset 0px 3px 6px -2px rgba(255, 255, 255, 0.64), inset 0px 0px 8px -2px rgba(255, 255, 255, 0.48);
  --shadow-btn-secondary-shadow-gradient: 0px 2px 4px rgba(171, 158, 138, 0.4), 0px -1px 2px rgba(241, 219, 186, 0.5), inset 0px 3px 6px -2px rgba(255, 255, 255, 0.64), inset 0px 0px 8px -2px rgba(255, 255, 255, 0.48);

  --color-bg-card-blue: linear-gradient(98.89deg, #F6F6FB 18.66%, #DDDCEE 46.73%, #F6F6FB 86%);
  --color-bg-card-rice: linear-gradient(98.89deg, #fff5e6 18.66%, #fce5c4 46.73%, #fff5e6 86%);
  --color-bg-card-red: linear-gradient(98.89deg, #FFFBF5 5.88%, #F9E2E2 46.73%, #FFFBF4 94.73%);
  --color-bg-card-red-2: linear-gradient(0deg, #FFFBF5, #FFFBF5), linear-gradient(98.89deg, rgba(255, 251, 245, 0.2) 5.88%, rgba(249, 212, 214, 0.2) 46.73%, rgba(255, 251, 244, 0.2) 94.73%);
  --color-bg-card-green: linear-gradient(98.89deg, #F8F9EF 5.88%, #EFF0C3 46.73%, #F8F9EF 94.73%);
  --color-bg-card-green-2: linear-gradient(0deg, #F8F9EF, #F8F9EF), linear-gradient(98.89deg, rgba(248, 249, 239, 0.05) 5.88%, rgba(235, 236, 183, 0.05) 46.73%, rgba(248, 249, 239, 0.05) 94.73%);
}

html.dark {
  --color-surface-primary-rice: #2D2C2A;
  --color-surface-primary-green: #7C7A65;
  --color-surface-secondary-rice: #363432;
  --color-surface-secondary-blue: #646273;
  --color-surface-secondary-red: #6B5D5D;
  --color-surface-tertiary-rice: #4D4B48;
  --color-surface-tertiary-green: #59574B;
  --color-surface-quaternary-green: #6B6958;
  --color-surface-quaternary-rice: #594F3C;
  --color-surface-quaternary-rice-hover: #6A5D42;
  --color-surface-disabled-gray: #363432;
  --color-overlay-rice: #F2E2B84D;
  --color-foreground-disabled-gray: #807D78;
  --color-foreground-tertiary: #999590;
  --color-foreground-tertiary-rice: #807660;
  --color-foreground-quaternary-rice: #594F3C;
  --color-foreground-secondary-rice: #363432;
  --color-foreground-primary-blue: #F7F8FB;
  --color-foreground-primary-red: #FEF1F1;
  --color-foreground-primary-green: #DCDBAB;
  --color-button-green: #D2D184;
  --color-primary-red: #423C3B;
  --color-primary-blue: #595763;
  --color-primary-rice: #E3BD66;
  --color-primary-900: #FFFCF6;
  --color-primary-gray: #595754;
  --color-primary-green: #48463F;
  --color-secondary-700: #FFF9F0;
  --color-secondary-blue: #CBCBE7;
  --color-secondary-rice: #E3BD66;
  --color-secondary-gray: #4D4B48;
  --color-secondary-red: #6B5D5D;
  --color-secondary-green: #504E45;
  --color-tertiary-500: #B2AEA8;
  --color-tertiary-rice: #474237;
  --color-tertiary-green: #3F3B35;
  --color-tertiary-blue: #646273;
  --color-status-fail: #FF6B6B;
  --color-status-success: #66C86A;

  --shadow-card: 0px 1px 6px rgba(25, 25, 24, 0.4), 0px 4px 13px rgba(25, 25, 24, 0.5);
  --shadow-btn-shadow-gradient: 0px 0px 8px -2px #FFFFFF7A inset, 0px 3px 6px -2px #FFFFFFA3 inset, 0px 4px 6px 0px #0000000A, 0px 4px 6px 0px #0000000A;
  --shadow-btn-secondary-shadow-gradient: 0px -1px 3px -2px #00000012 inset, 0px 2px 3px -1px #FFFFFF12 inset, 0px 1px 1px -0.5px #0000000A;

  --color-bg-card-blue: linear-gradient(98.89deg, #373634 18.66%, #6E6D77 46.73%, #373634 86%);
  --color-bg-card-rice: linear-gradient(98.89deg, #383633 18.66%, #615A51 46.73%, #383633 86%);
  --color-bg-card-red: linear-gradient(98.89deg, #494443 11.21%, #584D4E 46.73%, #322F2F 88.96%);
  --color-bg-card-red-2: linear-gradient(0deg, #494443, #494443), linear-gradient(98.89deg, rgba(73, 68, 67, 0.2) 5.88%, rgba(88, 77, 78, 0.2) 46.73%, rgba(50, 47, 47, 0.2) 94.73%);
  --color-bg-card-green: linear-gradient(98.89deg, #373634 18.76%, #666654 46.73%, #373634 87.62%);
  --color-bg-card-green-2: linear-gradient(0deg, #373634, #373634), linear-gradient(98.89deg, rgba(55, 54, 52, 0.05) 5.88%, rgba(102, 102, 84, 0.05) 46.73%, rgba(55, 54, 52, 0.05) 94.73%);
}

body {
  overflow-x: hidden;
  overflow-y: scroll;
  min-height: 100svh;
  scrollbar-gutter: stable;
}

#root {
  font-family: 'ABCDiatypeRounded', sans-serif;
  padding-bottom: env(safe-area-inset-bottom);
}

.header {
  width: 200%;
  mask: url("./images/header-mask.svg") no-repeat bottom center / 115%;
}

@media screen and (min-width: 768px) {
  .header {
    width: 100%;
  }
}


@layer utilities {
  @media (min-height: 1000px) and (min-width: 1280px) {
    div.custom-width {
      width: calc(720px + (100vh - 1000px) * 0.8);
    }
  }

  .qr-container {
    display: flex;
    height: 100%;
    justify-content: center;
    align-items: center;
  }

  .max-h-available {
    max-height: 100vh;
    max-height: -moz-available;
    max-height: -webkit-fill-available;
    max-height: -webkit-stretch;
  }
}

[cmdk-group-heading] {
  @apply diatype-sm-medium text-tertiary-500;
  padding: 0 11px;
}

.react-json-view .variable-value div {
  /* biome-ignore lint/correctness/noUnknownFunction: theme() is required for dynamic Tailwind color */
  color: theme("colors.white.100") !important;
}

/* ChartIQ */
.ciq-day .ciq-nav,
.ciq-day .chartContainer,
.ciq-day cq-chart-title {
  color: var(--color-tertiary-500) !important;
  background: var(--color-surface-secondary-rice) !important;
  border: none;
}

cq-palette-dock [orientation="vertical"] {
  border-right: var(--color-secondary-gray) 1px solid;
}

cq-separator {
  border-color: var(--color-secondary-gray);
}

.palette-container {
  background: var(--color-surface-secondary-rice);
  border: none;
}

.ciq-day cq-menu .menu-clickable:not(cq-help) {
  color: var(--color-tertiary-500);
}

.stx-subholder {
  border: none;
}

.ciq-chart {
  box-shadow: none;
}

cq-drawing-palette .tool-group .drawing-tools-group {
  margin:0;
}

.ciq-day .ciq-chart:first-of-type,
.ciq-day cq-dropdown .content,
cq-drawing-palette .ciq-tool:before,
cq-drawing-palette .ciq-mini-widget:before {
  background: var(--color-surface-secondary-rice);
}

cq-heading {
  color:  var(--color-secondary-700);
}

cq-dropdown .content>.item.ciq-active .ciq-switch,
cq-dropdown .content>.item.ciq-active:hover .ciq-switch,
.ciq-active .ciq-radio span:after,
.ciq-radio.ciq-active span:after {
  /* biome-ignore lint/correctness/noUnknownFunction: theme() is required for dynamic Tailwind color */
  background: theme("colors.red-bean.600");
}

.ciq-active .ciq-radio span:after,
.ciq-radio.ciq-active span:after {
  bottom: initial;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}


cq-drawing-palette.list .mini-widget-group .ciq-mini-widget[cq-view="list"] .icon,
cq-drawing-palette.grid .mini-widget-group .ciq-mini-widget[cq-view="grid"] .icon,
cq-drawing-palette .ciq-mini-widget.active .icon,
cq-drawing-palette .ciq-mini-widget .active .icon,
cq-drawing-palette .ciq-mini-widget:active .icon,
cq-drawing-palette .ciq-mini-widget .active+.icon {
  filter: brightness(0) saturate(100%) invert(35%) sepia(25%) saturate(1655%) hue-rotate(339deg) brightness(91%) contrast(89%);
}

cq-drawing-palette .ciq-tool.active .icon,
cq-drawing-palette .ciq-tool:active .icon {
  filter: brightness(0) saturate(100%) invert(35%) sepia(25%) saturate(1655%) hue-rotate(339deg) brightness(91%) contrast(89%);
}

cq-drawing-palette .ciq-tool label,
cq-drawing-palette .ciq-tool span[label],
cq-drawing-palette .ciq-mini-widget label,
cq-drawing-palette .ciq-mini-widget span[label] {
  background: var(--color-primary-rice);
}


cq-dropdown .content>.item:not(:is(.separator-item, .heading-item, .template-item, .ciq-btn)):hover>*,
cq-drawing-palette,
cq-menu.nav-dropdown:before,
.ciq-nav cq-toggle:before,
cq-views .item:hover {
  background: var(--color-surface-tertiary-rice)!important
}

:host(cq-toggle.active),
cq-toggle.active {
  border-bottom: 3px solid var(--color-primary-rice)
}

.stx_current_hr_up,
.stx_candle_up {
  background-color: var(--color-status-success);
}

.stx_current_hr_down,
.stx_candle_down {
  background-color: var(--color-status-fail);
}

.cq-down,
.stx_candle_down {
  color: var(--color-status-fail);
}

.cq-up,
.stx_candle_up {
  color: var(--color-status-success);
}

[cq-tooltip],
*>[cq-tooltip] {
  background: var(--color-primary-rice);
}

.ciq-chart-area,
cq-side-panel {
  bottom: 0;
}

.cq-dialogs {
  z-index: 99999999;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.chart-context > *,
cq-chart-title{
  /* biome-ignore lint/correctness/noUnknownFunction: theme() is required for dynamic Tailwind colors */
  font: theme("fontFamily.diatype-rounded") !important;
}

/* Scrollbar styles */
::-webkit-scrollbar {
  width: 6px;
}

::-webkit-scrollbar-track {
  background: transparent;
  border-radius: 99999px;
}

::-webkit-scrollbar-thumb {
  border-radius: 99999px;
  background: var(--color-secondary-gray);
}

